public/css/style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');

* {
  margin: 0
}

html, body {
  height: 100%;
  margin: 0;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
}

#status {
  color: rgb(77, 77, 88);
  font-style: italic;
}

.chat {
  display: flex
}

.chat__main {
  display: flex;
  flex-direction: column;
  height: calc(100% - 100px);
  width: 100%;
  position: relative;
  background-color: rgb(235, 235, 240);
  float: left;
}

.chat__messages-container {
  position: relative;
  height: calc(100% - 48px - 2.7rem);
}

.chat__messages {
  position: relative;
  height: 100%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  flex-grow: 1;
  padding: 10px;
}

.chat__messages,
.chat__header ol  {
    list-style-type: none
}

h1, h3, h6, p {
  margin: 0;
  padding: 0;
}

.centered-form__form {
  position: relative;
  padding: 40px;
  width: 100px;
  height: 100px;
}

.container {
  background-image: linear-gradient(rgb(90, 90, 110), rgb(60, 60, 80));
  width: 100%;
  height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
  height: calc(var(--vh, 1vh) * 100);
  top: 0; left: 0; bottom: 0; right: 0;
}

.content {
  background-color: white;
  width: 800px;
  height: 500px;
  margin: auto;
  position: absolute;
  top: 0; left: 0; bottom: 0; right: 0;
}

.left {
  position: relative;
  width: calc(45% - 80px);
  height: calc(100% - 80px);
  background-image: linear-gradient(rgb(30, 40, 70), rgb(10, 20, 40));
  color: white;
}

.right {
  position: relative;
  width: calc(55% - 80px);
  height: calc(100% - 80px);
  background-color: white;
}

.title {
  font-size: 4rem;
  font-weight: bold;
}

.title-1 {
  color: rgba(255, 255, 255, 0.5);
}

.title-2 {
  margin-top: -1rem;
}

.subtitle {
  color: rgb(90, 150, 230);
}

h3 {
  font-size: 2rem;
  color: rgb(0, 0, 50);
  font-weight: 600;
}

input {
  font-size: 1rem;
  font-family: inherit;
  color: inherit;
  padding: 0.5rem 1rem;
  border-radius: 2px;
  background-color: rgb(245, 245, 250);
  border: 1px solid rgb(240, 240, 250);
  
  display: block;
  transition: all .3s;
}
#chat-name {
  width: 90%;
  margin-top: .5rem;
}
#chat-message {
  width: calc(100% - 11.5rem);
  float: left;
  padding-top: .55rem;
  padding-bottom: .55rem;
}
#chat-message:disabled {
  color: rgb(155, 155, 166);
}



input:focus {
  outline: none;
  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
  border: 1px solid rgb(125, 145, 230);
}

label {
  font-size: 1rem;
  color: rgb(105, 120, 170);
  font-weight: 600;
}

button {
  display: inline-block;
  border: none;
  padding: .75rem 3rem;
  margin: 0;
  text-decoration: none;
  background: rgb(80, 110, 225);
  color: #ffffff;
  font-family: sans-serif;
  font-size: 1rem;
  cursor: pointer;
  text-align: center;
  transition: background 250ms ease-in-out, 
  transform 150ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  font-weight: bold;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  border-radius: 2px;
}
#send-button {
  margin-left: 10px;
  padding: .7rem 3rem;
  width: 8.5rem;
  padding: .75rem 0;
}

button:disabled {
  cursor: default;
  background: #698ea5
}

button:hover:enabled,
button:focus {
  background: rgb(70, 95, 200);
}

button:focus {
  outline: 1px solid #fff;
  outline-offset: -4px;
}

button:active {
  transform: scale(0.99);
}


.chat__header {
  position: relative;
  width: calc(100% - 50px);
  height: 50px;
  float: left;
  background: rgb(220, 220, 225);
  color: rgb(0, 0, 50);
  padding: 25px;
  margin: 0;
}

.chat__header-content {
  position: relative;
  left: 50px;
  width: calc(100% - 50px);
}

.chat__footer {
  position: absolute;
  background-color: rgb(220, 220, 225);
  height: auto;
  padding: 15px;
  bottom: 0;
  width: calc(100% - 30px);
}

.message-container {
  position: relative;
  width: 100%;
  height: auto;
  float: left;
  margin-bottom: 1rem;
}

.message {
  position: relative;
  background-color: white;
  width: auto;
  max-width: calc(100% - 200px);
  border-radius: .5rem;
  padding-left: 10px;
  padding-right: 10px;
  float: left;
}

.message-color {
  background: rgb(80, 110, 225);
  color: white;
  text-align: right;
  float: right;
}

.message__title-white h4, .message__title-white span {
  color: rgb(130, 130, 140);
}

.message__title-color h4, .message__body-color {
  color: white;
}

.message__title h4 {
  font-size: 1.2rem;
  font-weight: 400;
  /* display: inline; */
}

.message__title span {
  float: right;
  margin-top: 0;
  font-size: .7rem;
}

.message__body {
  padding-bottom: .7rem;
  padding-right: 50px;
  padding-top: .7rem;
}

.alert-container {
  position: relative;
  text-align: center;
  margin-bottom: 1rem;
}

.alert {
  position: relative;
  background: rgb(140, 170, 255);
  padding: 5px 15px;
  display: inline-block;
  border-radius: .25rem;
  max-width: calc(100% - 50px);
}


.overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
}

.pop {
  margin: auto;
  position: absolute;
  top: 0; left: 0; bottom: 0; right: 0;
  width: 300px;
  height: 300px;
  border-radius: 10px;
  background-color: white;
  text-align: center;
  padding: 25px;
  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
}
.pop-header {
  left: 0;
  top: 0;
  position: relative;
  height: 50px;
}
.pop-body {
  left: 0;
  top: 0;
  position: relative;
  height: calc(100% - 50px);
  display:flex;justify-content:center;align-items:center;

}
.loading-animation {
  display:table-cell;vertical-align:middle;
}
#numberOfUsers {
  font-style: italic;
  margin-top: .5rem;
}

@media only screen and (min-width: 800px) {
  .centered-form__form {
    float: left;
    margin: 0px;
  }

  .right {
    padding-right: 100px;
    width: calc(55% - 140px);
    text-align: justify;
  }
/* 
  .chat__main {
    float: right;
  } */
}

@media only screen and (max-width: 799px) {
  html, body {
    font-size: 13px;
  }

  .left {
    width: calc(100% - 50px);
    height: auto;
    padding: 25px;
    margin: 0;
    
  }

  .left-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 400px;
  }

  .right {
    width: calc(100% - 50px);
    height: auto;
    padding: 25px;
    margin: 0;
  }

  .right-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 400px;
  }

  .content {
    width: 100%;
    height: 100%;
  }

  .title {
    display: inline;
  }

  #join-button {
    font-size: 1.2rem;
  }
}

